# alpha-factor-mining

./: .gitignore  README.md  pyproject.toml
config/: settings.py  universe.yaml
scripts/: run_research.py
src/alpha_mining/: __init__.py  backtest.py  config.py  data_loader.py  evaluation.py  factors.py  pipeline.py  utils.py  visualization.py
