[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-alpha-mining"
version = "0.1.0"
description = "Factor mining pipeline for Binance USD-M perpetual markets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ccxt>=4.4.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "matplotlib>=3.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
